<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/setting_BG"
        android:layout_width="1010px"
        android:layout_height="1200px"
        android:layout_marginTop="200px"
        android:background="@color/colorButtonNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/setting_Title"
        android:layout_width="650px"
        android:layout_height="205px"
        android:background="@null"
        android:src="@drawable/setting_title"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="@+id/setting_BG"
        app:layout_constraintLeft_toLeftOf="@+id/setting_BG"
        android:layout_marginTop="15px"
        android:layout_marginLeft="15px"
        android:layout_marginStart="15px"/>
    <ImageButton
        android:id="@+id/setting_CloseButton"
        android:layout_width="170px"
        android:layout_height="170px"
        android:scaleType="centerCrop"
        android:src="@drawable/close_button"
        android:background="@drawable/button_selector"
        app:layout_constraintTop_toTopOf="@+id/setting_BG"
        app:layout_constraintRight_toRightOf="@+id/setting_BG"
        android:layout_marginTop="38px"
        android:layout_marginRight="40px"
        android:layout_marginEnd="40px" />
    <ScrollView
        android:id="@+id/setting_ScrollView"
        android:layout_width="850px"
        android:layout_height="840px"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_Title"
        android:layout_marginTop="50px"
        android:layout_marginLeft="40px">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@null">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">
                <TextView
                    android:id="@+id/setting_Port"
                    android:layout_width="230px"
                    android:layout_height="200px"
                    android:background="@null"
                    android:text="@string/setting_port"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/setting_PortContent"
                    android:layout_width="300px"
                    android:layout_height="200px"
                    android:layout_toRightOf="@+id/setting_Port"
                    android:layout_toEndOf="@+id/setting_Port"
                    android:background="@null"
                    android:maxLines="1"
                    android:text="80"
                    android:hint="@null"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical" />
                <ImageButton
                    android:id="@+id/setting_PortModify"
                    android:layout_width="140px"
                    android:layout_height="140px"
                    android:src="@drawable/modify_button"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">
                <TextView
                    android:id="@+id/setting_Receive"
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:background="@null"
                    android:text="@string/setting_receive"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/setting_ReceiveContent"
                    android:layout_width="300px"
                    android:layout_height="200px"
                    android:layout_toRightOf="@+id/setting_Receive"
                    android:layout_toEndOf="@+id/setting_Receive"
                    android:background="@null"
                    android:maxLines="1"
                    android:text="9.5MB"
                    android:hint="@null"
                    android:digits="@string/positive_number_inputFilter"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <ImageButton
                    android:id="@+id/setting_ReceiveModify"
                    android:layout_width="140px"
                    android:layout_height="140px"
                    android:src="@drawable/modify_button"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">
                <TextView
                    android:id="@+id/setting_Send"
                    android:layout_width="200px"
                    android:layout_height="200px"
                    android:background="@null"
                    android:text="@string/setting_send"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/setting_SendContent"
                    android:layout_width="300px"
                    android:layout_height="200px"
                    android:layout_toRightOf="@+id/setting_Send"
                    android:layout_toEndOf="@+id/setting_Send"
                    android:background="@null"
                    android:maxLines="1"
                    android:text="9.5MB"
                    android:hint="@null"
                    android:digits="@string/positive_number_inputFilter"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <ImageButton
                    android:id="@+id/setting_SendModify"
                    android:layout_width="140px"
                    android:layout_height="140px"
                    android:src="@drawable/modify_button"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">

                <TextView
                    android:id="@+id/setting_Firewall"
                    android:layout_width="wrap_content"
                    android:layout_height="200px"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:text="@string/setting_uncheck_mode"
                    android:textColor="@color/colorHighLight"
                    android:textSize="90px" />
                <ImageButton
                    android:id="@+id/setting_FirewallModify"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:src="@drawable/boolean_false"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">
                <TextView
                    android:id="@+id/setting_KeepAlive"
                    android:layout_width="wrap_content"
                    android:layout_height="200px"
                    android:background="@null"
                    android:text="@string/setting_keep_alive"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <ImageButton
                    android:id="@+id/setting_KeepAliveModify"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:src="@drawable/boolean_true"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">
                <TextView
                    android:id="@+id/setting_ExportRoot"
                    android:layout_width="wrap_content"
                    android:layout_height="200px"
                    android:background="@null"
                    android:text="@string/setting_export_root"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <ImageButton
                    android:id="@+id/setting_ExportRootModify"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:src="@drawable/boolean_false"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null">
                <TextView
                    android:id="@+id/setting_Version"
                    android:layout_width="450px"
                    android:layout_height="200px"
                    android:background="@null"
                    android:text="Ver:1.0.0"
                    android:textSize="90px"
                    android:textColor="@color/colorHighLight"
                    android:gravity="center_vertical"/>
                <ImageButton
                    android:id="@+id/setting_VersionInfo"
                    android:layout_width="120px"
                    android:layout_height="120px"
                    android:src="@drawable/detail_button"
                    android:scaleType="centerCrop"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/button_selector"
                    android:layout_marginRight="30px"
                    android:layout_marginEnd="30px"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <ImageButton
        android:id="@+id/setting_SaveButton"
        android:layout_width="1010px"
        android:layout_height="200px"
        android:src="@drawable/save_button"
        android:scaleType="centerCrop"
        android:background="@drawable/button_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_BG"
        android:layout_marginTop="15px"/>
    <ImageButton
        android:id="@+id/setting_SaveButtonMask"
        android:layout_width="1010px"
        android:layout_height="200px"
        android:scaleType="centerCrop"
        android:background="@color/colorScreen2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_BG"
        android:layout_marginTop="15px"/>

</android.support.constraint.ConstraintLayout>